--- a/src/main/resources/static/html/mail_alarm_start.html
+++ b/src/main/resources/static/html/mail_alarm_start.html
@@ -29,9 +29,9 @@
                     <td height="30"></td>
                 </tr>
                 <tr>
-                    <td><strong style="font-size: 12px; font-family: 'Pretendard', dotum; font-weight: 500; line-height:1.5">강채연 님, 안녕하세요.<br>
+                    <td><strong style="font-size: 12px; font-family: 'Pretendard', dotum; font-weight: 500; line-height:1.5">${USERNAME} 님, 안녕하세요.<br>
                         포스텍 EURA 미팅 시작 안내 입니다.<br>
-                        <span style="font-weight:700">‘인간공학개론'</span> 미팅에 참여해 주시기 바랍니다.<br><br>
+                        <span style="font-weight:700">‘${MEETNAME}'</span> 미팅에 참여해 주시기 바랍니다.<br><br>
 
                         링크: <a href="https://eura.com" style="text-decoration:none;color:#000; font-weight: 700;">https://eura.com</a></strong></td>
                 </tr>
