--- a/src/main/resources/static/html/mail_alarm_cancel.html
+++ b/src/main/resources/static/html/mail_alarm_cancel.html
@@ -23,15 +23,15 @@
                     <td height="20"></td>
                 </tr>
                 <tr>
-                    <td><strong style="font-size: 20px; font-family: 'Pretendard', dotum; font-weight: 700; line-height:1.5">포스텍 EURA<br>미팅이 취소 되었습니다.</strong></td>
+                    <td><strong style="font-size: 20px; font-family: 'Pretendard', dotum; font-weight: 700; line-height:1.5">포스텍 EURA<br>미팅이 취소되었습니다.</strong></td>
                 </tr>
                 <tr>
                     <td height="30"></td>
                 </tr>
                 <tr>
-                    <td><strong style="font-size: 12px; font-family: 'Pretendard', dotum; font-weight: 500; line-height:1.5">강채연 님, 안녕하세요.<br>
+                    <td><strong style="font-size: 12px; font-family: 'Pretendard', dotum; font-weight: 500; line-height:1.5">${USERNAME} 님, 안녕하세요.<br>
                         포스텍 EURA 미팅 취소 안내 입니다.<br>
-                        포스텍 EURA <span style="font-weight:700">‘인간공학개론'</span> 미팅이 취소되었습니다.</strong></td>
+                        포스텍 EURA <span style="font-weight:700">‘${MEETNAME}'</span> 미팅이 취소되었습니다.</strong></td>
                 </tr>
                 <tr>
                     <td height="60"></td>
