--- a/src/main/resources/static/html/mail_alarm_open.html
+++ b/src/main/resources/static/html/mail_alarm_open.html
@@ -23,7 +23,7 @@
                     <td height="20"></td>
                 </tr>
                 <tr>
-                    <td><strong style="font-size: 20px; font-family: 'Pretendard', dotum; font-weight: 700; line-height:1.5">포스텍 EURA<br>미팅 시작 30분 전 입니다.</strong></td>
+                    <td><strong style="font-size: 20px; font-family: 'Pretendard', dotum; font-weight: 700; line-height:1.5">포스텍 EURA<br>미팅이 공개되었습니다.</strong></td>
                 </tr>
                 <tr>
                     <td height="30"></td>
@@ -31,7 +31,7 @@
                 <tr>
                     <td><strong style="font-size: 12px; font-family: 'Pretendard', dotum; font-weight: 500; line-height:1.5">${USERNAME} 님, 안녕하세요.<br>
                         포스텍 EURA 미팅 시작 안내 입니다.<br>
-                        <span style="font-weight:700">‘${MEETNAME}'</span> 미팅 시작 30분 전 입니다.<br><br>
+                        <span style="font-weight:700">‘${MEETNAME}'</span> 미팅에 참여해 주시기 바랍니다.<br><br>
 
                         링크: <a href="https://eura.com" style="text-decoration:none;color:#000; font-weight: 700;">https://eura.com</a></strong></td>
                 </tr>
