--- a/src/main/resources/static/html/mail_alarm_cancel.html
+++ b/src/main/resources/static/html/mail_alarm_cancel.html
@@ -15,8 +15,8 @@
                 <tbody>
                 <tr>
                     <td>
-                        <a href="#none" style="margin-right:25px;"><img src="/assets/image_email/email_logo_postech.png" alt="POSTECH" style="vertical-align:middle;"></a>
-                        <a href="#none"><img src="/assets/image_email/email_logo_eura.png" alt="EURA" style="vertical-align:middle;"></a>
+                        <a href="#none" style="margin-right:25px;"><img src="${DOMAIN}/assets/image_email/email_logo_postech.png" alt="POSTECH" style="vertical-align:middle;"></a>
+                        <a href="#none"><img src="${DOMAIN}/assets/image_email/email_logo_eura.png" alt="EURA" style="vertical-align:middle;"></a>
                     </td>
                 </tr>
                 <tr>
@@ -38,7 +38,7 @@
                 </tr>
                 <tr>
                     <td align="center" style="background:#EDEDED; padding:15px 40px;">
-                        <span style=" font-family: 'Pretendard', dotum; color:#525566; font-size: 10px; line-height: 1.5;">본 이메일은 포스텍 EURA에서 [uxidstudio@gmail.com] 주소로 발송한 이메일입니다.<br>ⓒ 2022. Pohang University of Science and Technology. All Rights Reserved.</span>
+                        <span style=" font-family: 'Pretendard', dotum; color:#525566; font-size: 10px; line-height: 1.5;">본 이메일은 포스텍 EURA에서 [${USERMAIL}] 주소로 발송한 이메일입니다.<br>ⓒ 2022. Pohang University of Science and Technology. All Rights Reserved.</span>
                     </td>
                 </tr>
                 </tbody>
