--- a/src/main/resources/static/html/mail_auth.html
+++ b/src/main/resources/static/html/mail_auth.html
@@ -15,8 +15,8 @@
                 <tbody>
                 <tr>
                     <td>
-                        <a href="#none" style="margin-right:25px;"><img src="/assets/image_email/email_logo_postech.png" alt="POSTECH" style="vertical-align:middle;"></a>
-                        <a href="#none"><img src="/assets/image_email/email_logo_eura.png" alt="EURA" style="vertical-align:middle;"></a>
+                        <a href="#none" style="margin-right:25px;"><img src="${DOMAIN}/assets/image_email/email_logo_postech.png" alt="POSTECH" style="vertical-align:middle;"></a>
+                        <a href="#none"><img src="${DOMAIN}/assets/image_email/email_logo_eura.png" alt="EURA" style="vertical-align:middle;"></a>
                     </td>
                 </tr>
                 <tr>
@@ -29,18 +29,18 @@
                     <td height="30"></td>
                 </tr>
                 <tr>
-                    <td><strong style="font-size: 12px; font-family: 'Pretendard', dotum; font-weight: 500; line-height:1.5">강채연 님, 안녕하세요.<br>
+                    <td><strong style="font-size: 12px; font-family: 'Pretendard', dotum; font-weight: 500; line-height:1.5">${USERNAME} 님, 안녕하세요.<br>
                         포스텍 EURA를 이용해 주셔서 감사합니다.<br>
                         아래링크를 클릭 하여 회원가입을 완료해 주시기 바랍니다.<br><br>
 
-                        회원가입 완료 링크: <a href="https://eura.com" style="text-decoration:none;color:#000; font-weight: 700;">https://eura.com</a></strong></td>
+                        회원가입 완료 링크: <a href="${URL}" style="text-decoration:none;color:#000; font-weight: 700;">가입 완료 하러 가기</a></strong></td>
                 </tr>
                 <tr>
                     <td height="60"></td>
                 </tr>
                 <tr>
                     <td align="center" style="background:#EDEDED; padding:15px 40px;">
-                        <span style=" font-family: 'Pretendard', dotum; color:#525566; font-size: 10px; line-height: 1.5;">본 이메일은 포스텍 EURA에서 [uxidstudio@gmail.com] 주소로 발송한 이메일입니다.<br>ⓒ 2022. Pohang University of Science and Technology. All Rights Reserved.</span>
+                        <span style=" font-family: 'Pretendard', dotum; color:#525566; font-size: 10px; line-height: 1.5;">본 이메일은 포스텍 EURA에서 [${USERMAIL}] 주소로 발송한 이메일입니다.<br>ⓒ 2022. Pohang University of Science and Technology. All Rights Reserved.</span>
                     </td>
                 </tr>
                 </tbody>
