--- a/src/main/resources/static/html/mail_password.html
+++ b/src/main/resources/static/html/mail_password.html
@@ -15,8 +15,8 @@
                 <tbody>
                 <tr>
                     <td>
-                        <a href="#none" style="margin-right:25px;"><img src="/assets/image_email/email_logo_postech.png" alt="POSTECH" style="vertical-align:middle;"></a>
-                        <a href="#none"><img src="/assets/image_email/email_logo_eura.png" alt="EURA" style="vertical-align:middle;"></a>
+                        <a href="#none" style="margin-right:25px;"><img src="${DOMAIN}/assets/image_email/email_logo_postech.png" alt="POSTECH" style="vertical-align:middle;"></a>
+                        <a href="#none"><img src="${DOMAIN}/assets/image_email/email_logo_eura.png" alt="EURA" style="vertical-align:middle;"></a>
                     </td>
                 </tr>
                 <tr>
@@ -29,12 +29,12 @@
                     <td height="30"></td>
                 </tr>
                 <tr>
-                    <td><strong style="font-size: 12px; font-family: 'Pretendard', dotum; font-weight: 500; line-height:1.5">강채연 님, 안녕하세요<br>
+                    <td><strong style="font-size: 12px; font-family: 'Pretendard', dotum; font-weight: 500; line-height:1.5">${USERNAME} 님, 안녕하세요<br>
                         포스텍 EURA 임시 비밀번호를 안내 입니다.<br>
                         발급된 임시 비밀번호로 포스텍 EURA에 로그인 후<br>
                         비밀번호를 변경해 주시기 바랍니다.<br><br>
 
-                        임시 비밀번호:  <span style="font-weight:700;">Hello123!@</span><br><br>
+                        임시 비밀번호:  <span style="font-weight:700;">${PASSWD}</span><br><br>
                         </strong>
                     <span style="font-size: 12px; font-family: 'Pretendard', dotum; font-weight: 500; line-height:1.5; color:#8A8C99;">*발급받은 임시 비밀번호로 로그인 하신 후 반드시 비밀번호를 수정해 주세요<br>
                         비밀번호는 웹 로그인 > 내 프로필 > 비밀번호 > 편집하기 에서 수정할 수 있습니다.</span></td>
@@ -44,7 +44,7 @@
                 </tr>
                 <tr>
                     <td align="center" style="background:#EDEDED; padding:15px 40px;">
-                        <span style=" font-family: 'Pretendard', dotum; color:#525566; font-size: 10px; line-height: 1.5;">본 이메일은 포스텍 EURA에서 [uxidstudio@gmail.com] 주소로 발송한 이메일입니다.<br>ⓒ 2022. Pohang University of Science and Technology. All Rights Reserved.</span>
+                        <span style=" font-family: 'Pretendard', dotum; color:#525566; font-size: 10px; line-height: 1.5;">본 이메일은 포스텍 EURA에서 [${USERMAIL}] 주소로 발송한 이메일입니다.<br>ⓒ 2022. Pohang University of Science and Technology. All Rights Reserved.</span>
                     </td>
                 </tr>
                 </tbody>
