--- a/src/main/resources/static/html/mail_auth.html
+++ b/src/main/resources/static/html/mail_auth.html
@@ -40,7 +40,7 @@
                 </tr>
                 <tr>
                     <td align="center" style="background:#EDEDED; padding:15px 40px;">
-                        <span style=" font-family: 'Pretendard', dotum; color:#525566; font-size: 10px; line-height: 1.5;">본 이메일은 포스텍 EURA에서 [${USERMAIL}] 주소로 발송한 이메일입니다.<br>ⓒ 2022. Pohang University of Science and Technology. All Rights Reserved.</span>
+                        <span style=" font-family: 'Pretendard', dotum; color:#525566; font-size: 10px; line-height: 1.5;">본 이메일은 포스텍 EURA에서 [${USEREMAIL}] 주소로 발송한 이메일입니다.<br>ⓒ 2022. Pohang University of Science and Technology. All Rights Reserved.</span>
                     </td>
                 </tr>
                 </tbody>
