미팅룸 메일발송 로직수정 및 가입,미팅룸 메일폼 변경

--- a/src/main/resources/static/html/mail_alarm_invite.html
+++ b/src/main/resources/static/html/mail_alarm_invite.html
@@ -22,19 +22,19 @@
                     <td height="20"></td>
                 </tr>
                 <tr>
-                    <td><strong style="font-size: 24px; font-family: 'Pretendard', dotum; font-weight: 700; line-height:1.71">EURA 메일인증 안내 입니다.</strong></td>
+                    <td><strong style="font-size: 24px; font-family: 'Pretendard', dotum; font-weight: 700; line-height:1.71">EURA 미팅에 초대되었습니다.</strong></td>
                 </tr>
                 <tr>
                     <td height="30"></td>
                 </tr>
                 <tr>
-                    <td><strong style="font-size: 14px; font-family: 'Pretendard', dotum; font-weight: 500; line-height:1.7">${USERNAME} 님, 안녕하세요.<br>
-                        포스텍 EURA를 이용해 주셔서 감사합니다.<br>
-                        아래링크를 클릭 하여 회원가입을 완료해 주시기 바랍니다.<br><br>
+                    <td><strong style="font-size: 14px; font-family: 'Pretendard', dotum; font-weight: 500; line-height:1.71">${USERNAME} 님, 안녕하세요<br>
+                        ‘${MEETNAME}' 미팅에 초대되었습니다.<br>
+                        -시간 : ${MEETORIDATE}<br><br>
 
-                        <!--회원가입 완료 링크: <a href="https://eura.com" style="text-decoration:none;color:#000; font-weight: 700;">https://eura.com</a></strong>-->
-                        <a href="${URL}" style="background: #794CFF; color:#fff; padding: 10px 20px; font-size: 12px;border-radius:8px; text-decoration: none;">회원가입 완료하기</a>
-                    </td>
+                        아래링크를 클릭하여 미팅에 참여해 주세요.<br><br>
+
+                        <a href="${URL}" style="background: #794CFF; color:#fff; padding: 8px 23px;border-radius:8px; text-decoration: none;">미팅에 참여하기</a></strong></td>
                 </tr>
                 </tbody>
             </table>
